--- a/ToDo/client-app/src/app/layout/styles.css
+++ b/ToDo/client-app/src/app/layout/styles.css
@@ -6,9 +6,15 @@ body {
   background-image: linear-gradient(135deg,rgb(70, 70, 70)  0%, rgb(200, 200, 200) 100%);
 }
 
-.ui.segment{
+ .six.wide.column>.ui.segment{
   background-color: #bdbdbd !important;
-}
+} 
+
+.ten.wide.column>.ui.segment{
+  background-color: #bdbdbd !important; 
+  /* background-image: url('images/flower.jpg'); */
+  background-size: cover !important;
+} 
 
 .content{
  text-align: center !important;
@@ -17,6 +23,7 @@ body {
 .ui.card{
   background-color: #bdbdbd !important;
 }
+
 
 .ui.card>.content>.header{
   color: rgb(0, 0, 0) !important;
